------------------------------------------------------------------------
r1266 | gaser | 2018-02-01 11:58:07

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_stat_analyze_ROIs.m
M       html/cat.html
M       internal/cat_vol_cMRegularizarNLM3D.mexmaci64

Fixed: Typo in cat_stat_analyze_ROIs.m that caused crash.
------------------------------------------------------------------------
r1265 | gaser | 2018-02-01 11:10:55 +0100 (Do, 01 Feb 2018) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_stat_analyze_ROIs.m
M       cat_vol_morph.m
M       cat_vol_sanlm.m

(1) Changed: Replaced spm_con_vol by convn in cat_vol_morph which is faster and
    less memory demanding.
(2) Changed: Updated some help texts.


------------------------------------------------------------------------
r1264 | gaser | 2018-01-30 12:02:00 +0100 (Di, 30 Jan 2018) | 8 lines

Changed paths:
M       CHANGES.txt
M       cat_surf_resamp_freesurfer.m

Fixed: Error in last change of cat_surf_resamp_freesurfer.m with other
parameters than thickness.


------------------------------------------------------------------------
r1263 | gaser | 2018-01-30 11:56:31 +0100 (Di, 30 Jan 2018) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_stools.m
M       cat_surf_resamp_freesurfer.m

(1) Fixed: Resampling of Freesurfer data was not working with new 32k mesh 
    option.
(2) Changed: Added option to also resample other Freesurfer measures.

------------------------------------------------------------------------
r1262 | gaser | 2018-01-30 11:27:34 +0100 (Di, 30 Jan 2018) | 42 lines

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
 M      atlases_surfaces/atlases_surfaces.man
 M      atlases_surfaces_32k/atlases_surfaces_32k.man
 M      atlases_surfaces_32k/lh.Schaefer2018_1000Parcels_17Networks_order.annot
 M      atlases_surfaces_32k/lh.Schaefer2018_1000Parcels_7Networks_order.annot